New event "UserDeleted"
Added: Producer (user-service), consumer, processor (meal-service) for event "UsersDeleted".

Edited: API request fields for: creation (user\meal), updating (user).
