# meal_service/internal/models/models.go
@@ -3,9 +3,9 @@ package models
 import "time"
 
 type MealInput struct {
+	UserID      uint64  `json:"user_id"`
 	Name        string  `json:"name"`
 	WeightGrams float32 `json:"weight_grams"`
-	UserID      uint64  `json:"user_id"`
 }
 
 type MealTemplate struct {
@@ -19,8 +19,8 @@ type MealTemplate struct {
 type MealInfo struct {
 	ID           uint64    `json:"id"`
 	UserId       uint64    `json:"user_id"`
-	Name         string    `json:"name"`         //Grilled chicken
-	WeightGrams  float32   `json:"weight_grams"` //200
+	Name         string    `json:"name"`
+	WeightGrams  float32   `json:"weight_grams"`
 	Calories100g float32   `json:"calories_100g"`
 	Proteins100g float32   `json:"proteins_100g"`
 	Fats100g     float32   `json:"fats_100g"`
