# meal_service/internal/pb/models/meal_models/meal_model.pb.go
@@ -1,7 +1,7 @@
 // Code generated by protoc-gen-go. DO NOT EDIT.
 // versions:
 // 	protoc-gen-go v1.36.11
-// 	protoc        v6.33.4
+// 	protoc        v6.33.2
 // source: models/meal_models/meal_model.proto
 
 package meal_models
@@ -130,6 +130,66 @@ func (x *MealInfo) GetDate() *timestamppb.Timestamp {
 	return nil
 }
 
+type MealInput struct {
+	state         protoimpl.MessageState `protogen:"open.v1"`
+	UserId        uint64                 `protobuf:"varint,2,opt,name=user_id,json=userId,proto3" json:"user_id,omitempty"`
+	Name          string                 `protobuf:"bytes,3,opt,name=name,proto3" json:"name,omitempty"`
+	WeightGrams   float32                `protobuf:"fixed32,4,opt,name=weight_grams,json=weightGrams,proto3" json:"weight_grams,omitempty"`
+	unknownFields protoimpl.UnknownFields
+	sizeCache     protoimpl.SizeCache
+}
+
+func (x *MealInput) Reset() {
+	*x = MealInput{}
+	mi := &file_models_meal_models_meal_model_proto_msgTypes[1]
+	ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+	ms.StoreMessageInfo(mi)
+}
+
+func (x *MealInput) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*MealInput) ProtoMessage() {}
+
+func (x *MealInput) ProtoReflect() protoreflect.Message {
+	mi := &file_models_meal_models_meal_model_proto_msgTypes[1]
+	if x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use MealInput.ProtoReflect.Descriptor instead.
+func (*MealInput) Descriptor() ([]byte, []int) {
+	return file_models_meal_models_meal_model_proto_rawDescGZIP(), []int{1}
+}
+
+func (x *MealInput) GetUserId() uint64 {
+	if x != nil {
+		return x.UserId
+	}
+	return 0
+}
+
+func (x *MealInput) GetName() string {
+	if x != nil {
+		return x.Name
+	}
+	return ""
+}
+
+func (x *MealInput) GetWeightGrams() float32 {
+	if x != nil {
+		return x.WeightGrams
+	}
+	return 0
+}
+
 var File_models_meal_models_meal_model_proto protoreflect.FileDescriptor
 
 const file_models_meal_models_meal_model_proto_rawDesc = "" +
@@ -145,7 +205,11 @@ const file_models_meal_models_meal_model_proto_rawDesc = "" +
 	"\tfats_100g\x18\a \x01(\x02R\bfats100g\x12\x1d\n" +
 	"\n" +
 	"carbs_100g\x18\b \x01(\x02R\tcarbs100g\x12.\n" +
-	"\x04date\x18\t \x01(\v2\x1a.google.protobuf.TimestampR\x04dateBOZMgithub.com/JoePeach762/PP_project/meal_service/internal/pb/models/meal_modelsb\x06proto3"
+	"\x04date\x18\t \x01(\v2\x1a.google.protobuf.TimestampR\x04date\"[\n" +
+	"\tMealInput\x12\x17\n" +
+	"\auser_id\x18\x02 \x01(\x04R\x06userId\x12\x12\n" +
+	"\x04name\x18\x03 \x01(\tR\x04name\x12!\n" +
+	"\fweight_grams\x18\x04 \x01(\x02R\vweightGramsBOZMgithub.com/JoePeach762/PP_project/meal_service/internal/pb/models/meal_modelsb\x06proto3"
 
 var (
 	file_models_meal_models_meal_model_proto_rawDescOnce sync.Once
@@ -159,13 +223,14 @@ func file_models_meal_models_meal_model_proto_rawDescGZIP() []byte {
 	return file_models_meal_models_meal_model_proto_rawDescData
 }
 
-var file_models_meal_models_meal_model_proto_msgTypes = make([]protoimpl.MessageInfo, 1)
+var file_models_meal_models_meal_model_proto_msgTypes = make([]protoimpl.MessageInfo, 2)
 var file_models_meal_models_meal_model_proto_goTypes = []any{
 	(*MealInfo)(nil),              // 0: meals.models.v1.MealInfo
-	(*timestamppb.Timestamp)(nil), // 1: google.protobuf.Timestamp
+	(*MealInput)(nil),             // 1: meals.models.v1.MealInput
+	(*timestamppb.Timestamp)(nil), // 2: google.protobuf.Timestamp
 }
 var file_models_meal_models_meal_model_proto_depIdxs = []int32{
-	1, // 0: meals.models.v1.MealInfo.date:type_name -> google.protobuf.Timestamp
+	2, // 0: meals.models.v1.MealInfo.date:type_name -> google.protobuf.Timestamp
 	1, // [1:1] is the sub-list for method output_type
 	1, // [1:1] is the sub-list for method input_type
 	1, // [1:1] is the sub-list for extension type_name
@@ -184,7 +249,7 @@ func file_models_meal_models_meal_model_proto_init() {
 			GoPackagePath: reflect.TypeOf(x{}).PkgPath(),
 			RawDescriptor: unsafe.Slice(unsafe.StringData(file_models_meal_models_meal_model_proto_rawDesc), len(file_models_meal_models_meal_model_proto_rawDesc)),
 			NumEnums:      0,
-			NumMessages:   1,
+			NumMessages:   2,
 			NumExtensions: 0,
 			NumServices:   0,
 		},
